--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/panettone.html">Panettone Recipe</a></li>
-        <li><a href="recipes/meatballs.html">Meatball Recipe</a></li>
-        <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
+    <h1 id="title">Odin Recipes</h1>
+    <ul class="list">
+        <li><a href="recipes/panettone.html"><span class="points">Panettone Recipe</span></a></li><br>
+        <li><a href="recipes/meatballs.html"><span class="points">Meatball Recipe</span></a></li><br>
+        <li><a href="recipes/lasagna.html"><span class="points">Lasagna Recipe</span></a></li><br>
+    </ul>
 </body>
 </html>
