--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1 id="title">Odin Recipes</h1>
+    <div class="header">
+    <h1>Odin Recipes</h1>
+</div>
     <ul class="list">
         <li><a href="recipes/panettone.html"><span class="points">Panettone Recipe</span></a></li><br>
         <li><a href="recipes/meatballs.html"><span class="points">Meatball Recipe</span></a></li><br>
